# docs/swagger.json
@@ -2072,6 +2072,46 @@
                 }
             }
         },
+        "/subscriptions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Return all the subscriptions (active, canceled, history) of the connected user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscriptions"
+                ],
+                "summary": "List the user's subscriptions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Subscription"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "error: Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/subscriptions/checkout/{contentCreatorId}": {
             "post": {
                 "security": [
@@ -2149,13 +2189,13 @@
             }
         },
         "/subscriptions/{subscriptionId}": {
-            "delete": {
+            "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Annule un abonnement Stripe et met à jour son statut dans la base de données",
+                "description": "Return the detailed information of a subscription",
                 "consumes": [
                     "application/json"
                 ],
@@ -2165,11 +2205,11 @@
                 "tags": [
                     "subscriptions"
                 ],
-                "summary": "Annuler un abonnement",
+                "summary": "Details of a subscription",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID de l'abonnement à annuler",
+                        "description": "ID of the subscription",
                         "name": "subscriptionId",
                         "in": "path",
                         "required": true
@@ -2177,7 +2217,69 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "message: Abonnement annulé avec succès",
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Subscription"
+                        }
+                    },
+                    "401": {
+                        "description": "error: Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "error: You are not authorized to view this subscription",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "error: Subscription not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Cancel a Stripe subscription and update its status in the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscriptions"
+                ],
+                "summary": "Cancel a subscription",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of the subscription to cancel",
+                        "name": "subscriptionId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "message: Subscription canceled successfully",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -2195,7 +2297,7 @@
                         }
                     },
                     "403": {
-                        "description": "error: Vous n'êtes pas autorisé à annuler cet abonnement",
+                        "description": "error: You are not authorized to cancel this subscription",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -2204,7 +2306,7 @@
                         }
                     },
                     "404": {
-                        "description": "error: Abonnement non trouvé",
+                        "description": "error: Subscription not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -2213,7 +2315,7 @@
                         }
                     },
                     "500": {
-                        "description": "error: Erreur lors de l'annulation de l'abonnement",
+                        "description": "error: Error when canceling the Stripe subscription",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -3407,6 +3509,51 @@
                 "StatusProcessing",
                 "StatusClosed",
                 "StatusRejected"
+            ]
+        },
+        "models.Subscription": {
+            "type": "object",
+            "properties": {
+                "contentCreatorId": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "endDate": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "startDate": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.SubscriptionStatus"
+                },
+                "stripeSubscriptionId": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SubscriptionStatus": {
+            "type": "string",
+            "enum": [
+                "ACTIVE",
+                "CANCELED",
+                "PENDING"
+            ],
+            "x-enum-varnames": [
+                "SubscriptionActive",
+                "SubscriptionCanceled",
+                "SubscriptionPending"
             ]
         },
         "models.User": {
